[metadata]
name = mrob
version = 0.0.1
home-page = https://github.com/MobileRoboticsSkoltech/mrob
long-description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0 
license_files = LICENSE

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.*
packages = find:
setup_requires = setuptools >= 40.8.0   

[options.package_data]
* =
    *.so 

[sdist]
formats = zip, gztar

